--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.487.0",
     "next": "^15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.56.2",
     "react-native-table-component": "^1.2.2",
     "react-query": "^3.39.3",
