--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/material": "^7.1.2",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.10",
@@ -19,6 +22,7 @@
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/themes": "^3.2.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -27,16 +31,20 @@
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.487.0",
     "next": "^15.3.3",
+    "notistack": "^3.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.2",
+    "react-i18next": "^15.5.3",
     "react-native-table-component": "^1.2.2",
     "react-query": "^3.39.3",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.7",
     "uuid": "^11.1.0",
+    "yup": "^1.6.1",
     "zod": "^3.24.4",
     "zustand": "^5.0.5"
   },
