--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -35,6 +36,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.2",
+    "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.5.3",
     "react-native-table-component": "^1.2.2",
     "react-query": "^3.39.3",
